2.2. Fix gap of usercard on mobile

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -47,4 +47,8 @@
   .app-main-hidable {
     display: none;
   }
+
+  .app-main-not-hidable {
+    flex: 0;
+  }
 }
